# docs/swagger.json
@@ -133,13 +133,6 @@
                 "summary": "Add document to multiple collections",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Document ID",
-                        "name": "document_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Collection IDs",
                         "name": "request",
                         "in": "body",
